fix: show top of the images in projects row
There was a small issue that in projects row, if the image was too long only the center of the picture would be shown but now it shows the top of it.

--- a/src/styles/components/_projectsRow.scss
+++ b/src/styles/components/_projectsRow.scss
@@ -45,6 +45,8 @@
       object-fit: cover;
       opacity: 0;
       transition: opacity 0.4s ease;
+
+      object-position: top;
     }
 
     &.loaded {
